--- a/hr_project_vite/src/index.css
+++ b/hr_project_vite/src/index.css
@@ -1,11 +1,19 @@
+
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /*font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;*/
+  font-family: 'Roboto Slab', 'Roboto', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #063532;
+}
+
+p {
+  margin: 0;
 }
 
 a {
