updating with download and styling

--- a/hr_project_vite/src/index.css
+++ b/hr_project_vite/src/index.css
@@ -46,9 +46,10 @@ button {
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: transparent;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: white;
 }
 button:focus,
 button:focus-visible {
