--- a/hr_project_vite/src/App.css
+++ b/hr_project_vite/src/App.css
@@ -9,12 +9,42 @@
 
 }
 
+.nameLabel{
+    font-size: 18pt;
+}
+  
+
 .connect_button{
     background-color: var(--light_green);
     color: white;
+}
+
+.connect_button:hover {
+    border-color: var(--dark_green);
 }
 
 .bpm_num{
     font-weight: bolder;
     font-size: 50pt;
 }
+
+.download_button{
+    padding:0;
+    margin:0;
+    width:50px;
+    height:50px;
+    margin-right:20px;
+    margin-left:64px;
+    border-radius: 100%;
+}
+
+
+/*
+.connect_popup{
+    width: 345px;
+    height: 315px;
+    position: "absolute";
+    z-index: 99;
+    background-colour : "white";
+}
+*/
